--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://lingzuer.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: 北武灵尊
+subtitle: 记录一些事情，方便查阅。
+author: lingzuer
 simple_search: https://www.google.com/search
 description:
 
@@ -70,17 +70,17 @@ github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
-twitter_tweet_button: true
+# twitter_user:
+# twitter_tweet_button: true
 
 # Google +1
-google_plus_one: false
-google_plus_one_size: medium
+# google_plus_one: false
+# google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user:
-googleplus_hidden: false
+# googleplus_user:
+# googleplus_hidden: false
 
 # Pinboard
 pinboard_user:
@@ -95,7 +95,7 @@ disqus_short_name:
 disqus_show_comment_count: false
 
 # Google Analytics
-google_analytics_tracking_id:
+# google_analytics_tracking_id:
 
 # Facebook Like
-facebook_like: false
+# facebook_like: false
